gitops/apps/js-snake/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: js-snake
  namespace: js-snake
  labels:
    app: js-snake
spec:
  revisionHistoryLimit: 2
  progressDeadlineSeconds: 120
  selector:
    matchLabels:
      app: js-snake
  template:
    metadata:
      labels:
        app: js-snake
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: capability.isma.dev/lightweight
                    operator: In
                    values: ["true"]
      containers:
        - name: js-snake
          image: ghcr.io/ismola/js-snake:main
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
              ephemeral-storage: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
              ephemeral-storage: 256Mi
