gitops/apps/js-snake/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: js-snake
  namespace: js-snake
spec:
  ingressClassName: traefik
  rules:
    - host: js-snake.ismola.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: js-snake
                port:
                  number: 80
